--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,7 @@ body{
 
 .hero-gradient {
     margin-bottom: -440px;
-    width: 390px;
+    width: 100%;
     height: 440px;
     border-radius: 25rem;
     background: radial-gradient(110.88% 79.69% at 47.77% 151.82%, #FFEC45 0%, rgba(255, 236, 69, 0.3) 54.92%, rgba(255, 236, 69, 0) 96.11%), radial-gradient(50% 68.23% at 98.21% 96.61%, #41D1B7 0%, rgba(65, 209, 183, 0.35) 49.27%, rgba(65, 209, 183, 0) 100%), radial-gradient(83.71% 75.52% at -10.04% 2.86%, #8263DB 0%, rgba(129, 114, 218, 0.26) 56.87%, rgba(129, 114, 218, 0) 100%), linear-gradient(180deg, #58CCDC 0%, rgba(88, 204, 220, 0) 100%), linear-gradient(81.23deg, #FF557E 21.4%, rgba(255, 85, 85, 0) 84.87%, #F2F5FA); background-blend-mode: normal,normal,darken,normal,normal,normal; filter: blur(100px);
